--- a/OldiOS/OldiOS.Shared/_Imports.razor
+++ b/OldiOS/OldiOS.Shared/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using global::System.Net.Http
+﻿@using System = global::System
+@using global::System.Net.Http
 @using global::System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
